# dpdk-playground

./: CMakeLists.txt  conandata.yml  meson.build
include/: dpdk_port.hpp  dsp.hpp  ecpri.hpp  gui.hpp
scripts/: setup.sh
src/: error.h  iq_source.cpp  iq_source.h  main.cpp
src/generator/: CMakeLists.txt  main.cpp
src/receiver/: CMakeLists.txt  main.cpp
